@@ -2679,10 +2679,11 @@ feed_table_tag(struct table *tbl, char *line, struct table_mode *mode,
 #if 0
 		tbl->tabattr[tbl->row + i][tbl->col + j] &= ~(HTT_X | HTT_Y);
 #endif
-		if (tbl->tabattr[tbl->row + i][tbl->col + j] & (HTT_X | HTT_Y))
-		    break;
-		tbl->tabattr[tbl->row + i][tbl->col + j] |=
-		    ((i > 0) ? HTT_Y : 0) | ((j > 0) ? HTT_X : 0);
+		if (! (tbl->tabattr[tbl->row + i][tbl->col + j] &
+			(HTT_X | HTT_Y))) {
+		    tbl->tabattr[tbl->row + i][tbl->col + j] |=
+			((i > 0) ? HTT_Y : 0) | ((j > 0) ? HTT_X : 0);
+		}
 		if (tbl->col + j > tbl->maxcol) {
 		    tbl->maxcol = tbl->col + j;
 		}
